src/app/globals.css
:root {
  --background: #111;
  --background-light: #1a1a1a;
  --background-lighter: #222;
  --border: #333;
  --border-lighter: #555;
  --foreground: rgb(226, 226, 226);
  --red: #ef4444;
  --green: #4ade80;
  --dark-green: #1e3a2a;
}

html {
  height: 100%;
}

::selection {
  color: var(--dark-green);
  background-color: #4ade80;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  color: var(--foreground);
  background: var(--background);
  font-family: "Outfit", Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

.clickable:hover {
  cursor: pointer;
}

.disabled:hover {
  cursor: not-allowed;
}

hr {
  border: none;
  border-bottom: 1px solid var(--border);
  margin: 20px 0px;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.color-swatch-button {
  height: 30px;
  width: 160px;
  border-radius: 7px;
  border: none;
  cursor: pointer;
}

.color-picker-overlay {
  position: absolute;
  top: -220%;
  left: 25%;
  z-index: 100;
  background-color: var(--background);
  border: 1px solid var(--background-light);
  border-radius: 12px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

